--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -9,9 +9,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Revolutions Site Plan</h1>
+      <h2>William Barr</h2>
+      <h2>WDD 130-07</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,17 +20,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>Explain what the game Revolutions is and how to play it</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Anyone who enjoys playing board games</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/revolutions_logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#002152]</td><td class="secondary">[#AF6046]</td><td class="accent1">[#73695F]</td><td class="accent2">[#B8B8B8]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: [raleway]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: [raleway]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
