--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,10 +22,10 @@
             </nav>
         </header>
         <div id="hero">
-            <div id="hero-img">
-                <img id="hero-box" src="images/hero.png" alt="People Enjoying White Water Rafting">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People Enjoying White Water Rafting">
             </div>
-            <section id="her-msg">
+            <section id="hero-msg">
                 <h1 class="home-title">Have an Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class='button-box'>
@@ -48,15 +48,15 @@
                 <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
                 <img class="icon" src="images/oars.png" alt="oars icon">
                 <h2>Rapids</h2>
-                <div id="background"></div>
-                <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-                <section class="msg">
-                    <h2>More Than Just The Thrill</h2>
-                    <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more
-                        than just the rapids. It's a great way to get away from it all and relax amongst all the beauty
-                        of the great outdoors. </p>
-                    <a class='join' href="rivers.html">Join Us</a>
-                </section>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>   
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more
+                    than just the rapids. It's a great way to get away from it all and relax amongst all the beauty
+                    of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
         <footer>
@@ -68,7 +68,7 @@
                     <img src="images/facebook.png" alt="fb icon" target="_blank">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.com" alt="Twitter Icon" target="_blank">
+                    <img src="images/twitter.png" alt="Twitter Icon" target="_blank">
                 </a>
                 <a href="https://instagram.com">
                     <img src="images/instagram.png" alt="instagram icon" target="_blank">
