added images and other page content to the final site plan

--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -124,29 +124,39 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Revolutions is a fun competitive board game with a scifi theme
+        
+        Step into a world of bounty hunters and warlords as you compete against or with your friends to earn the most credits before the game is over
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Revolutions Hero.png" alt="Box Cover Hero">
+        <img src="images/revolutions_logo.png" alt="Logo">
+        <img src="images/Main Concept.JPG" alt="Box Art">
 
-      </ul>
+    </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        To start the game all players are dealt five cards and the planet tiles are randomly placed in a hexagonal pattern resulting in the board and everyone having a hand of five cards. To decide who takes the first turn everyone yells a word out loud at the same time and whoever says the longest word gets to go first, unless someone at the table has been to space already, then they get to go first because it is a game about space and so that just makes sense. Everyone places they’re player token at the center of the map or ‘galaxy’.
+	Then you move onto the taking turns stage. Before the first player takes their turn a new ‘round’ begins. Since the game has just started the first round doesn’t happen yet so you move just straight into the first player’s turn. Each player has three of these following actions during their turn. These three actions are ‘build equipment’, ‘attack enemy’, or ‘attack a player’. The player can do three of these in any combination. These turns continue until all players have taken their first turn and then a new round starts. At the beginning of a new ‘round’ every player that is able to will move their player token to another planet in the galaxy and then the play will resume starting with the first player. The first player of the round will eventually change and that will be explained later.
+	This then leads into the win condition of the game. The game ends when the third ‘warlord’ of the game has been defeated. When the third ‘warlord’ of the game is drawn every player then has until it is defeated to try and get as much money as possible. Once the ‘warlord’ is defeated the game is over and the player with the most money wins the game. Players can extend the game or make it shorter by choosing to play with the more or less warlords.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/board layout designer.jpg" alt="Game Board Layout">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Revolutions began when my roommate and I stayed up late one night talking about our favorite video game and how there wasn't a board game version of it.
+	We talked about different parts of that video game that could be translated easily into a board game and the other parts which couldn’t as easily. Eventually we came to a prototype made out of uno cards and tape. This prototype was pretty rough and almost a direct replica of that video game that we loved.
+	This first prototype soon became known as the ab game because the box we stored the pieces and cards in was made from the box of an ab roller. The ab game was play tested for a while before the first major overhaul came to it. There were aspects of it that needed to be removed to make it more fun, accessible, and fair. These aspects though were some of the core aspects that related it to that video game we both loved. Thus the Ab Game 2.0 was born. About a year later another big change came but nothing as close to the first overhaul, Ab Game 2.5. Then a few months later and I had been able to pinpoint most of the things that I didn’t like about the game while also being able to finally determine the way I wanted the game to feel in terms of complexity, strategy, and luck.
+	This gave birth to the Ab Game 3.0 or Revolutions. The current and hopefully final major overhaul that this game will go through. Revolutions is now much simpler to learn and play. Certain aspects of the game were changed to make it rely more on luck and other aspects were changed to give the player more freedom with their character than before.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <img src="images/Blue and Gold Solders.png" alt="Blue and Gold Soldiers Concept Art">
+      <img src="images/Distant View Jungle.jpg" alt="Scifi Soldiers in a Jungle">
+      <img src="images/White Soldiers.jpg" alt="White Soldiers Concept Art">
 
       </ul>
       <hr>
@@ -160,19 +170,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homepage Wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Instructions page wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/About page Wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
