--- a/wwr/index.html
+++ b/wwr/index.html
@@ -65,13 +65,13 @@
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="fb icon" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.png" alt="Twitter Icon" target="_blank">
+                    <img src="images/twitter.png" alt="Twitter Icon">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="instagram icon" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
