--- a/wwr/page2.html
+++ b/wwr/page2.html
@@ -24,7 +24,7 @@
         </div>
         <section id="hero-msg2">
             <h1 class="home-title2">River Sites</h1>
-            <h4>Dry Oar Rafting has excursion in multiple exciting locations! Take a look to find your next adventure!</h4>
+            <h4>Dry Oar Rafting has excursion sites in multiple exciting locations! Take a look to find your next adventure!</h4>
            
         </section>
     </div>
