--- a/final/index.html
+++ b/final/index.html
@@ -4,8 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="home-header">
+        <!-- <nav class="home-nav">
+            <a class="nav-1" href="index.html">Home</a>
+            <a class="nav-2" href="instructions.html">Instruction</a>
+            <a class="nav-3" href="about.html">about</a>
+            <a class="nav-4" href="contactus.html">Contact Us</a>
+        </nav> --> 
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="rules.html">Rules</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
+    <main>
+        <div class="hero-total">
+        <div class="hero-banner">
+            <img class="hero-img" src="images/Revolutions Hero.png" alt="Revolutions Concept Art">
+            <img class="hero-logo" src="images/revolutions_logo.png" alt="Revolutions Logo">
+        </div>
+        <div class="intro-block">
+            <hr>
+            <h1>
+                Revolutions is a fun competitive board game with a scifi theme Step into a world of bounty hunters and warlords as you compete against or with your friends to earn the most credits before the game is over
+            </h1>
+            <div>
+                <a class="button" href="instructions.html">
+                    Learn How to Play
+                </a>
+            </div>
+        </div>
+        </div>
+        <div class="about-block">
+            <div>
+                <a class="button" href="contactus.html">
+                Join the Team
+            </a>
+            </div>
+            <img class="about-img1" src="images/Yellow and grey jungle.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/Blue and Gold Solders.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img3" src="images/green soldiers.png" alt="Orange and Black Scifi Soldiers"> 
+        </div>
+        <div class="menu-block">
+            <div>
+            <p>
+                Lorem ipstem facere itaque fugit at blanditiis veerendis nisi excepturi amet, provident animi ullam eaque quidem at velit expedita quo deserunt ipsum esse facere numquam delectus soluta dignissimos enim ipsam, error tempore fuga?, ipsum dolor sit amet consectetur adipisicing elit. Esse laboriosam nam aliquam molestiae ipsam nobis consectetur. Deserunt adipisci voluptas explicabo nesciunt distinctio dolores, sint laboriosam labore vel nulla repellendus veniam?
+            </p>
+                <a class="button" href="contactus.html">
+                Join the Team
+            </a>
+            </div>
+            <img class="menu-img" src="images/short black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers"> 
+        </div>
+    </main>
+    <footer>
+        <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
+            <p><a href="site-plan-rafting.html">About</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="Twitter Icon">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+    </footer>
 </body>
 </html>
