updated html and css for final

--- a/final/about.html
+++ b/final/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="about">
     <header>
         <!-- <nav>
             <div>
@@ -19,6 +19,7 @@
             <a class="nav-3" href="about.html">about</a>
             <a class="nav-4" href="contactus.html">Contact Us</a>
         </nav> -->
+        <div class="header-bar">
         <a href="index.html" id="logo_link">
             <img class="logo" src="images/revolutions_logo.png" alt="revolutions logo">
         </a>
@@ -28,12 +29,36 @@
             <a href="rules.html">Rules</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
+        </div>
     </header>
     <main class="about-page">
         <div class="about-block">
+            <div>
+                <h1 class="about-title">
+                    How the Game Came to Be
+                </h1>
+            </div>
             <img class="about-img1" src="images/Yellow and grey jungle.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img2" src="images/Blue and Gold Solders.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/Orange Hunters.png" alt="Orange and Black Scifi Soldiers">
             <img class="about-img3" src="images/green soldiers.png" alt="Orange and Black Scifi Soldiers"> 
+        </div>
+        <div class="about-block">
+            <img class="about-img1" src="images/black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/square yellows.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img3" src="images/grey and yellow with mech.png" alt="Orange and Black Scifi Soldiers"> 
+        </div>
+        <div class="menu-block">
+            <p>
+                Revolutions began when my roommate and I stayed up late one night talking about our favorite video game and how there wasn't a board game version of it.
+	We talked about different parts of that video game that could be translated easily into a board game and the other parts which couldn’t as easily. Eventually we came to a prototype made out of uno cards and tape. This prototype was pretty rough and almost a direct replica of that video game that we loved.
+            </p>
+            <p>
+                This first prototype soon became known as the ab game because the box we stored the pieces and cards in was made from the box of an ab roller. The ab game was play tested for a while before the first major overhaul came to it. There were aspects of it that needed to be removed to make it more fun, accessible, and fair. These aspects though were some of the core aspects that related it to that video game we both loved. Thus the Ab Game 2.0 was born. About a year later another big change came but nothing as close to the first overhaul, Ab Game 2.5. Then a few months later and I had been able to pinpoint most of the things that I didn’t like about the game while also being able to finally determine the way I wanted the game to feel in terms of complexity, strategy, and luck.
+            </p>
+            <p>
+                This gave birth to the Ab Game 3.0 or Revolutions. The current and hopefully final major overhaul that this game will go through. Revolutions is now much simpler to learn and play. Certain aspects of the game were changed to make it rely more on luck and other aspects were changed to give the player more freedom with their character than before.
+
+            </p>
         </div>
     </main>
     <footer>
