--- a/final/index.html
+++ b/final/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Revolutions Home Page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="index">
     <header class="home-header">
         <!-- <nav class="home-nav">
             <a class="nav-1" href="index.html">Home</a>
@@ -21,19 +21,19 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <main>
+    <main class="index">
         <div class="hero-total">
-        <div class="hero-banner">
-            <img class="hero-img" src="images/Revolutions Hero.png" alt="Revolutions Concept Art">
-            <img class="hero-logo" src="images/revolutions_logo.png" alt="Revolutions Logo">
-        </div>
-        <div class="intro-block">
-            <hr>
-            <h1>
-                Revolutions is a fun competitive board game with a scifi theme Step into a world of bounty hunters and warlords as you compete against or with your friends to earn the most credits before the game is over
-            </h1>
+            <div class="hero-banner">
+                <img class="hero-img" src="images/Revolutions Hero.png" alt="Revolutions Concept Art">
+                <img class="hero-logo" src="images/revolutions_logo.png" alt="Revolutions Logo">
+            </div>
+            <div class="intro-block">
+                <hr>
+                <h2>
+                    Revolutions is a fun competitive board game with a scifi theme Step into a world of bounty hunters and warlords as you compete against or with your friends to earn the most credits before the game is over
+                </h2>
             <div>
-                <a class="button" href="instructions.html">
+                <a class="button" href="rules.html">
                     Learn How to Play
                 </a>
             </div>
@@ -41,12 +41,12 @@
         </div>
         <div class="about-block">
             <div>
-                <a class="button" href="contactus.html">
-                Join the Team
-            </a>
+                <a class="button" href="about.html">
+                    About the Game
+                </a>
             </div>
             <img class="about-img1" src="images/Yellow and grey jungle.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img2" src="images/Blue and Gold Solders.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/Orange Hunters.png" alt="Orange and Black Scifi Soldiers">
             <img class="about-img3" src="images/green soldiers.png" alt="Orange and Black Scifi Soldiers"> 
         </div>
         <div class="menu-block">
