--- a/final/rules.html
+++ b/final/rules.html
@@ -6,20 +6,36 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="rules">
     <header>
-        <a href="index.html" id="logo_link">
-            <img class="logo" src="images/revolutions_logo.png" alt="revolutions logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="rules.html">Rules</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
+            <div class="header-bar">
+                <a href="index.html" id="logo_link">
+                <img class="logo" src="images/revolutions_logo.png" alt="revolutions logo">
+                </a>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="rules.html">Rules</a>
+                    <a href="contactus.html">Contact Us</a>
+                </nav>
+            </div>
+            <div class="cards-banner">
+                <img class="card-img" src="images/cards banner big.png" alt="cards banner">
+            </div>
     </header>
     <main>
-        
+        <div class="rules-page">
+            <p class="top-paragraph">
+                To start the game all players are dealt five cards and the planet tiles are randomly placed in a hexagonal pattern resulting in the board and everyone having a hand of five cards. To decide who takes the first turn everyone yells a word out loud at the same time and whoever says the longest word gets to go first, unless someone at the table has been to space already, then they get to go first because it is a game about space and so that just makes sense. Everyone places they’re player token at the center of the map or ‘galaxy’.
+            </p class="middle-paragraph">
+            <p>
+                Then you move onto the taking turns stage. Before the first player takes their turn a new ‘round’ begins. Since the game has just started the first round doesn’t happen yet so you move just straight into the first player’s turn. Each player has three of these following actions during their turn. These three actions are ‘build equipment’, ‘attack enemy’, or ‘attack a player’. The player can do three of these in any combination. These turns continue until all players have taken their first turn and then a new round starts. At the beginning of a new ‘round’ every player that is able to will move their player token to another planet in the galaxy and then the play will resume starting with the first player. The first player of the round will eventually change and that will be explained later.
+            </p>
+            <p class="bottom-paragraph">
+                This then leads into the win condition of the game. The game ends when the third ‘warlord’ of the game has been defeated. When the third ‘warlord’ of the game is drawn every player then has until it is defeated to try and get as much money as possible. Once the ‘warlord’ is defeated the game is over and the player with the most money wins the game. Players can extend the game or make it shorter by choosing to play with the more or less warlords.
+            </p>
+            <img class="middle-img" src="images/board layout designer.jpg" alt="Board Layout">
+        </div>
     </main>
     <footer>
         <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
