put in html for last page

--- a/final/index.html
+++ b/final/index.html
@@ -52,7 +52,7 @@
         <div class="menu-block">
             <div>
             <p>
-                Lorem ipstem facere itaque fugit at blanditiis veerendis nisi excepturi amet, provident animi ullam eaque quidem at velit expedita quo deserunt ipsum esse facere numquam delectus soluta dignissimos enim ipsam, error tempore fuga?, ipsum dolor sit amet consectetur adipisicing elit. Esse laboriosam nam aliquam molestiae ipsam nobis consectetur. Deserunt adipisci voluptas explicabo nesciunt distinctio dolores, sint laboriosam labore vel nulla repellendus veniam?
+                Revolutions is still in development and does not currently have a date that it will be done by. The art for the cards, board tiles, and box are all stll in development as well as the fine tuning of the stats of each card. Anyone with a background in graphic design, game design, or digital art is free to reachout if interested in joining us for the ride!
             </p>
                 <a class="button" href="contactus.html">
                 Join the Team
