updated footers and added title to page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body class="index">
     <div id="content">
         <header>
             <a href="index.html" id="logo_link">
@@ -59,7 +59,7 @@
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
-        <footer>
+        <footer class="index">
             <p>Dry Oar &copy; 2023 - William-Patrick Barr</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
