--- a/final/rules.html
+++ b/final/rules.html
@@ -20,6 +20,9 @@
                 </nav>
             </div>
             <div class="cards-banner">
+                <h1>
+                    How to Play
+                </h1>
                 <img class="card-img" src="images/cards banner big.png" alt="cards banner">
             </div>
     </header>
