--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -41,7 +41,7 @@
               </ul>
         </form>
     </main>
-    <footer>
+    <footer class="contactus">
         <p>Dry Oar &copy; 2023 - William-Patrick Barr</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
