final site changes

--- a/final/index.html
+++ b/final/index.html
@@ -24,8 +24,8 @@
     <main class="index">
         <div class="hero-total">
             <div class="hero-banner">
-                <img class="hero-img" src="images/Revolutions Hero.png" alt="Revolutions Concept Art">
-                <img class="hero-logo" src="images/revolutions_logo.png" alt="Revolutions Logo">
+                <img class="hero-img" src="images/hero-banner-3.jpeg" alt="Revolutions Concept Art">
+                <img class="hero-logo" src="images/revolutions-logo-light.png" alt="Revolutions Logo">
             </div>
             <div class="intro-block">
                 <hr>
@@ -58,13 +58,14 @@
                 Join the Team
             </a>
             </div>
-            <img class="menu-img" src="images/short black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers"> 
+            <img class="menu-img" src="images/black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers"> 
         </div>
     </main>
     <footer>
         <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
             <p><a href="site-plan-rafting.html">About</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com">
                     <img src="images/facebook.png" alt="fb icon">
