--- a/final/rules.html
+++ b/final/rules.html
@@ -20,10 +20,10 @@
                 </nav>
             </div>
             <div class="cards-banner">
+                <img class="card-img" src="images/cards banner big.png" alt="cards banner">
                 <h1>
                     How to Play
                 </h1>
-                <img class="card-img" src="images/cards banner big.png" alt="cards banner">
             </div>
     </header>
     <main>
@@ -44,6 +44,7 @@
         <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
             <p><a href="site-plan-rafting.html">About</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com">
                     <img src="images/facebook.png" alt="fb icon">
