--- a/final/about.html
+++ b/final/about.html
@@ -65,6 +65,7 @@
         <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
             <p><a href="site-plan-rafting.html">About</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com">
                     <img src="images/facebook.png" alt="fb icon">
