fixed image names and css errors

--- a/final/about.html
+++ b/final/about.html
@@ -38,14 +38,14 @@
                     How the Game Came to Be
                 </h1>
             </div>
-            <img class="about-img1" src="images/Yellow and grey jungle.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img2" src="images/Orange Hunters.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img3" src="images/green soldiers.png" alt="Orange and Black Scifi Soldiers"> 
+            <img class="about-img1" src="images/Yellow-and-grey-jungle.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/Orange-Hunters.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img3" src="images/green-soldiers.png" alt="Orange and Black Scifi Soldiers"> 
         </div>
         <div class="about-block">
-            <img class="about-img1" src="images/black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img2" src="images/square yellows.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img3" src="images/grey and yellow with mech.png" alt="Orange and Black Scifi Soldiers"> 
+            <img class="about-img1" src="images/black-and-orange-concept-art.jpg" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/square-yellows.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img3" src="images/grey-and-yellow-with-mech.png" alt="Orange and Black Scifi Soldiers"> 
         </div>
         <div class="menu-block">
             <p>
