--- a/final/index.html
+++ b/final/index.html
@@ -45,9 +45,9 @@
                     About the Game
                 </a>
             </div>
-            <img class="about-img1" src="images/Yellow and grey jungle.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img2" src="images/Orange Hunters.png" alt="Orange and Black Scifi Soldiers">
-            <img class="about-img3" src="images/green soldiers.png" alt="Orange and Black Scifi Soldiers"> 
+            <img class="about-img1" src="images/Yellow-and-grey-jungle.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img2" src="images/Orange-Hunters.png" alt="Orange and Black Scifi Soldiers">
+            <img class="about-img3" src="images/green-soldiers.png" alt="Orange and Black Scifi Soldiers"> 
         </div>
         <div class="menu-block">
             <div>
@@ -58,7 +58,7 @@
                 Join the Team
             </a>
             </div>
-            <img class="menu-img" src="images/black and orange concept art.jpg" alt="Orange and Black Scifi Soldiers"> 
+            <img class="menu-img" src="images/black-and-orange-concept-art.jpg" alt="Orange and Black Scifi Soldiers"> 
         </div>
     </main>
     <footer>
