--- a/final/rules.html
+++ b/final/rules.html
@@ -20,7 +20,7 @@
                 </nav>
             </div>
             <div class="cards-banner">
-                <img class="card-img" src="images/cards banner big.png" alt="cards banner">
+                <img class="card-img" src="images/cards-banner-big.png" alt="cards banner">
                 <h1>
                     How to Play
                 </h1>
@@ -37,7 +37,7 @@
             <p class="bottom-paragraph">
                 This then leads into the win condition of the game. The game ends when the third ‘warlord’ of the game has been defeated. When the third ‘warlord’ of the game is drawn every player then has until it is defeated to try and get as much money as possible. Once the ‘warlord’ is defeated the game is over and the player with the most money wins the game. Players can extend the game or make it shorter by choosing to play with the more or less warlords.
             </p>
-            <img class="middle-img" src="images/board layout designer.jpg" alt="Board Layout">
+            <img class="middle-img" src="images/board-layout-designer.jpg" alt="Board Layout">
         </div>
     </main>
     <footer>
