--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#002152]</td><td class="secondary">[#AF6046]</td><td class="accent1">[#73695F]</td><td class="accent2">[#B8B8B8]</td></tr>
+        <tr><td class="primary">[#2d3168]</td><td class="secondary">[#a8a8a870]</td><td class="accent1">[#AF6046]</td><td class="accent2">[white]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [raleway]  <!-- change this -->
+        Heading Font: [Saira]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [raleway]  <!-- change this -->
+        Paragraph Font: [Saira]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
