made changes for final page

--- a/final/contactus.html
+++ b/final/contactus.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main class="contactus-page">
-        <div id="feedback"></div>
+        <!-- <div id="feedback"></div>
 
         <form action="" method="post">
             <ul>
@@ -52,7 +52,19 @@
                     <button type="submit">Send your message</button>
                 </li>
               </ul>
-        </form>
+        </form> -->
+        <div class="info-card">
+            <h2>Give Us a Call!</h2>
+            <p>(208) 123-4567</p>
+        </div>
+        <div class="info-card">
+            <h2>Send Us an Email!</h2>
+            <p>(208) 123-4567</p>
+        </div>
+        <div class="info-card">
+            <h2>Give Us a Call!</h2>
+            <p>(208) 123-4567</p>
+        </div>
     </main>
     <footer>
         <p>Revolutions &copy; 2023 - William-Patrick Barr</p>
