--- a/final/about.html
+++ b/final/about.html
@@ -27,7 +27,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="rules.html">Rules</a>
-            <a href="contactus.html">Contact Us</a>
+            <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
         </div>
     </header>
