--- a/final/index.html
+++ b/final/index.html
@@ -15,10 +15,10 @@
             <a class="nav-4" href="contactus.html">Contact Us</a>
         </nav> --> 
         <nav>
-            <a href="index.html">Home</a>
+            <!-- <a href="index.html">Home</a> -->
             <a href="about.html">About</a>
             <a href="rules.html">Rules</a>
-            <a href="contactus.html">Contact Us</a>
+            <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
     </header>
     <main class="index">
