--- a/final/contactus.html
+++ b/final/contactus.html
@@ -27,7 +27,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="rules.html">Rules</a>
-            <a href="contactus.html">Contact Us</a>
+            <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
         </div>
     </header>
@@ -53,17 +53,19 @@
                 </li>
               </ul>
         </form> -->
-        <div class="info-card">
-            <h2>Give Us a Call!</h2>
-            <p>(208) 123-4567</p>
-        </div>
-        <div class="info-card">
-            <h2>Send Us an Email!</h2>
-            <p>(208) 123-4567</p>
-        </div>
-        <div class="info-card">
-            <h2>Give Us a Call!</h2>
-            <p>(208) 123-4567</p>
+        <div class="info-section">
+            <div class="info-card">
+                <h2>Give Us a Call!</h2>
+                <p>(208) 123-4567</p>
+            </div>
+            <div class="info-card">
+                <h2>Send Us an Email!</h2>
+                <p>randomemail@email.com</p>
+            </div>
+            <div class="info-card">
+                <h2>Send Us a Letter!</h2>
+                <p>1234 address st. Big City, Idaho</p>
+            </div>
         </div>
     </main>
     <footer>
